vm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-vm
spec:
  selector:
    pr: placeholder
  ports:
    - name: http
      port: 80
      targetPort: 80
