vm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-vm
spec:
  ingressClassName: nginx
  rules:
    - host: pr-placeholder.demo.q3dm17.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-vm
                port:
                  number: 80
  tls:
    - hosts:
        - pr-placeholder.demo.q3dm17.ru
      secretName: demo-vm-tls
